# ds-marl-air-cargo

./: .gitignore  README.md  context.txt  draft.py  dtp_platform.py.lprof  dtp_rules.md  flight.md  main.py  project.md  pyproject.toml  scalene-profile.html  scalene-profile.json  simulation.py.lprof  speed_test.py  wandb_export.csv  wandb_export.py  wandb_results.csv
config/: assumptions.yaml  config.py  params.yaml  sim_params.yaml
docs/: thesis.docx
env/: demand.py  dtp_platform.py  infrastructure.py  kpi_tracker.py  objects.py  road.py  schiphol.py  schiphol_env.py  service_time.py
mappo_scenario_mo_mlp__0f7d1aa6_26_05_19-09_15_39/: config.pkl
mappo_scenario_mo_mlp__22d8dbe9_26_05_19-09_37_38/: config.pkl  mappo_scenario_mo_mlp__22d8dbe9_26_05_19-09_37_38.json
mappo_scenario_mo_mlp__45d016ff_26_05_19-09_29_49/: config.pkl  mappo_scenario_mo_mlp__45d016ff_26_05_19-09_29_49.json
mappo_scenario_mo_mlp__4e90138e_26_05_19-14_07_17/: config.pkl
mappo_scenario_mo_mlp__55c8e781_26_05_19-14_01_07/: config.pkl
mappo_scenario_mo_mlp__5ba3453d_26_05_19-08_46_46/: config.pkl  mappo_scenario_mo_mlp__5ba3453d_26_05_19-08_46_46.json
mappo_scenario_mo_mlp__602da7cf_26_05_19-09_11_17/: config.pkl
mappo_scenario_mo_mlp__755e4dd5_26_05_19-15_08_49/: config.pkl  mappo_scenario_mo_mlp__755e4dd5_26_05_19-15_08_49.json
mappo_scenario_mo_mlp__7babd072_26_05_19-16_25_01/: mappo_scenario_mo_mlp__7babd072_26_05_19-16_25_01.json
mappo_scenario_mo_mlp__7c5fcd76_26_05_19-14_50_25/: mappo_scenario_mo_mlp__7c5fcd76_26_05_19-14_50_25.json
marl/: benchmarl_task.py
(+841 files in other folders)
